# aeris-apisdk-py

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
aerisapisdk/: aeradminsdk.py  aerframesdk.py  aerisconfig.py  aerisutils.py  aertrafficsdk.py  cli.py  exceptions.py
sample/: README.md  aerframe_budget_geofence.py
tests/: AerTestCase.py  __init__.py  test_aeradminsdk.py  test_aerframesdk.py  test_aerisapisdk.py
